2004-10-12  Laurent Sansonetti  <lrz@gnome.org>

	General reformat of the code.	

	* data/alexandria/glade/info_book_dialog.glade,
	  lib/alexandria/library.rb,
	  lib/alexandria/ui/info_book_dialog.rb:

	- Now possible to change the cover of a book via the Properties dialog ;
	- The data model has been altered: the small covers are now automatically
	  generated from the medium covers, so they do not need to be downloaded
	  anymore, and the extension of the medium cover is ".cover".

	* lib/alexandria/book_providers/amazon.rb,
	  lib/alexandria/book_providers/bn.rb,
	  lib/alexandria/book_providers/proxis.rb,
	  lib/alexandria/ui/icons.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:
	
	Follows data model changes.

	* lib/alexandria/ui/export_dialog.rb:

	Changed the ONIX archive extension (xml.tbz2 -> onix.tbz2). 

	* TODO:

	Refresh.

2004-09-30  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS:

	- Reformatted ;
	- Added Robby.

	* TODO:

	Refresh.

2004-10-01  Robby Stephenson  <robby@periapsis.org>

	* lib/alexandria/library.rb,
	  lib/alexandria/ui/export_dialog.rb:

	Introduced Tellico (ex. Bookcase) .zip archive export.

2004-09-30  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/main_app.rb:

	s/Edition/Binding.

	* data/alexandria/glade/info_book_dialog.glade,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/info_book_dialog.rb,
	  lib/alexandria/ui/main_app.rb:

	The book properties dialog has been modified to allow the
	edition of all fields (title, authors, etc...).  The cover
	still needs some code to be changed though.

	* lib/alexandria/ui/export_dialog.rb:

	Fixed the ONIX archive extention to .tbz2 instead of tgz.

	* lib/alexandria/book_providers.rb:

	Splitted a translatable string.

2004-09-19  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Show more feedback on the status bar ;